[package]
name = "hash_set_map"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/developing-today/HashSetMap"
readme = "README.md"
description = """
HashSetMap, K=hash(V),V=V | So uh.. yeah. HashSetMap. ⛓️

"""

[dependencies]
hex = "0.4.3"
sha1 = "0.10.1"
