[package]
name = "hash_set_map"
version = "0.3.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/developing-today/HashSetMap"
readme = "README.md"
description = """
HashSetMap, K=hash(V),V=V | So uh.. yeah. HashSetMap. ⛓️

"""
[lib]
name = "lib"
path = "src/lib/mod.rs"

[dependencies]
hex = "0.4.3"
sha1 = "0.10.1"
